20071117 disk/plusd.c: ensure we get a prototype for memset (Fred).
20071117 if2.c, machine.c: fix loading Interface II ROMs (thanks, Stuart Brady)
	 (Fred).
20071118 sound/sdlsound.c: don't use power of two sound buffers on Amiga
         (more of patch #1712260) (Chris Young).
20071118 menu.c,menu_data.dat: simplify menu_media_disk_{insert,eject} action
	 encoding (thanks, Gergely) (Stuart).
20071119 ui/win32/{Makefile.am,menu_data.c,menu_data.h,menu_data.rc}: remove
	 pregenerated Win32 menu data, and a add phony target to generate the
	 Win32 menu data (Stuart).
20071119 disk/wd_fdc.c: clear busy status for a read address command when no
	 address mark is found (part of patch #1834231) (Gergely Szasz).
20071119 disk/{beta.c,wd_fdc.[ch]}: intrq/datarq fixes (more of patch #1834231)
	 (Gergely Szasz).
20071119 if1.[ch],menu.[ch],menu_data.dat: combine menu_media_disk_*() and
	 menu_media_mdr_*() into menu_media_*(), and use a null filename to
	 request a blank image (more of patch #1834231) (Gergely Szasz).
20071119 disk/{beta.c,plusd.c},menu.c,menu_data.dat: add UI to insert blank
	 +D and Beta disks (more of patch #1834231) (Gergely Szasz).
20071119 menu_data.dat,ui.c: rename set/remove write protect options to
	 enable/disable (Stuart).
20071119 disk/disk.c: mark newly inserted disks as not dirty (more of patch
	 #1834231) (Gergely Szasz).
20071119 disk/{beta.[ch],disk.c,fdd.[ch],plusd.[ch]},menu.c,menu_data.dat,
	 ui/ui.h,ui.c: add write protect options for +D and Beta disks (rest
	 of patch #1834231) (Gergely Szasz).
20071119 disk/{beta.[ch],plusd.[ch]},machines/{specplus3.[ch]},menu.c,tape.[ch]:
	 don't autoload tapes and disks when using the Media menu (feature
	 request #1828224) (Stuart).
20071120 man/fuse.1: update man page for recent media UI changes (Stuart).
20071120 compat/win32/osname.c: work around a suspected Wine (or MinGW) bug
	 (Stuart).
20071120 disk/disk.c: fix disk density autodetection (patch #1835229) (Gergely
	 Szasz).