@@ -2298,3 +2298,5 @@
 	 (Stuart).
 20071120 disk/disk.c: fix disk density autodetection (patch #1835229) (Gergely
 	 Szasz).
+20071120 disk/disk.c: support variable length tracks and fine tune density
+	 autodetection (patch #1835402) (Gergely Szasz).
